TMDM-5138: Use Maven for building org.talend.mdm.core Major code & dependency clean up. Use higher version of compilation plugin for compilation performance gains.
git-svn-id: http://talendforge.org/svn/tom/trunk@95591 f6f1c999-d317-4740-80b0-e6d1abc6f99e